--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img src="/images/bg-header-mobile.png" class="bg-mobile">
   <img src="/images/bg-header-desktop.png" class="bg-desktop">
   <figure class="figure-logo">
-  <img src="../images/logo.svg" alt="C logo" class="logo">
+  <img src="./images/logo.svg" alt="C logo" class="logo">
 </figure>
 </header>
 
