--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 <div class="layout">
 <header>
-  <img src="./images/bg-header-mobile.png" class="bg-mobile">
-  <img src="./images/bg-header-desktop.png" class="bg-desktop">
+  <img src="images/bg-header-mobile.png" class="bg-mobile">
+  <img src="images/bg-header-desktop.png" class="bg-desktop">
   <figure class="figure-logo">
-  <img src="./images/logo.svg" alt="C logo" class="logo">
+  <img src="images/logo.svg" alt="C logo" class="logo">
 </figure>
 </header>
 
