--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 <div class="layout">
 <header>
-  <img src="images/bg-header-mobile.png" class="bg-mobile">
-  <img src="images/bg-header-desktop.png" class="bg-desktop">
+  <img src="/images/bg-header-mobile.png" class="bg-mobile">
+  <img src="/images/bg-header-desktop.png" class="bg-desktop">
   <figure class="figure-logo">
-  <img src="images/logo.svg" alt="C logo" class="logo">
+  <img src="/images/logo.svg" alt="C logo" class="logo">
 </figure>
 </header>
 
@@ -98,11 +98,11 @@
 </section>
 
 <section class="companies">
-  <img src="./images/logo-google.png" alt="">
-  <img src="./images/logo-ibm.png" alt="">
-  <img src="../images/logo-microsoft.png" alt="">
-  <img src="./images/logo-hp.png" alt="">
-  <img src="./images/logo-vector-graphics.png" alt="">
+  <img src="/images/logo-google.png" alt="">
+  <img src="/images/logo-ibm.png" alt="">
+  <img src="/images/logo-microsoft.png" alt="">
+  <img src="/images/logo-hp.png" alt="">
+  <img src="/images/logo-vector-graphics.png" alt="">
 </section>
 
 <section class="section5">
@@ -135,9 +135,9 @@
 </div>
 
   <div class="footer__social">
-    <img src="./images/icon-facebook.svg" alt="">
-    <img src="./images/icon-twitter.svg" alt="">
-    <img src="./images/icon-instagram.svg" alt="">
+    <img src="/images/icon-facebook.svg" alt="">
+    <img src="/images/icon-twitter.svg" alt="">
+    <img src="/images/icon-instagram.svg" alt="">
   </div>
 </footer>
 </div>
