--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 
     <div class="picture1-section">
-      <figure class="computer"><img src="/images/image-computer.png" alt="mac computer"></figure>
+      <figure class="computer"><img src="https://github.com/Lucianofitti/Clipboardlandingpage/blob/main/images/image-computer.png" alt="mac computer"></figure>
         <div class="functions">
           <h3>Quick Search</h3>
             <p> Easily search your snippets by content, category, web address, application, and more.</p>
