--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <section>
   <div class="title">
-  <h2 id="br">A history of  everything you copy</h2>
+  <h2 id="br">A history of  everything you copyasasdasdasdasd</h2>
   <p>Clipboard allows you to track and organize everything you 
     copy. Instantly access your clipboard on all your devices.</p>
   </div>
